Adjusted few more CSS to prevent some of the popup items not showing up properly on iOS Safari when the address bar is expanded

--- a/DFW-Mobile/src/resources/admin.css
+++ b/DFW-Mobile/src/resources/admin.css
@@ -407,7 +407,7 @@
     background: rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     margin: 4px 16px;
-    height: calc(80vh - 168px);
+    height: calc(70vh - 168px);
     /*max-height: 50vh;*/
     padding: 8px;
     overflow-x: hidden;
